@@ -57,6 +57,7 @@
 
 #include <named/client.h>
 #include <named/globals.h>
+#include <named/interfacemgr.h>
 #include <named/log.h>
 #include <named/server.h>
 #include <named/sortlist.h>
@@ -737,8 +738,9 @@ query_validatezonedb(ns_client_t *client, dns_name_t *name,
 			if (queryonacl == NULL)
 				queryonacl = client->view->queryonacl;
 
-			result = ns_client_checkaclsilent(client, NULL,
-							  queryonacl, ISC_TRUE);
+			result = ns_client_checkaclsilent(client,
+						      &client->interface->addr,
+							 queryonacl, ISC_TRUE);
 			if ((options & DNS_GETDB_NOLOG) == 0 &&
 			    result != ISC_R_SUCCESS)
 				ns_client_log(client, DNS_LOGCATEGORY_SECURITY,
